--- a/styles.css
+++ b/styles.css
@@ -19,14 +19,16 @@ body {
 }
 section{
 	background-color: var(--blue-white);
-	padding: 50px;
+	padding: 20px;
 	border-radius: 8px;
+    margin-bottom: 50px;
 }
 header {
     background-color: var(--blue-dark);
     color: var(--blue-white);
     padding: 10px 20px;
     text-align: center;
+    background-image: url("./images/bg480.jpg");
 }
 header h1{
     padding: 0px;
@@ -48,6 +50,7 @@ nav {
     left: 0;
     width: 100vw;
     height: 2rem;
+    padding: 5px;
     align-items: center;
     box-shadow: 2px 0 5px rgba(0,0,0,0.1);
     text-align: center;
@@ -59,6 +62,7 @@ nav a {
 }
 nav a:hover {
     color: var(--light-shade);
+    transition: ease-in-out 300ms;
   }
 nav a i {
     margin-right: 10px; /* Space between icon and text */
@@ -180,6 +184,7 @@ footer a {
         bottom: 0;
         top: unset;
         height: 3rem;
+        z-index: 1;
     }
 }
 
