--- a/styles.css
+++ b/styles.css
@@ -1,217 +1,240 @@
 :root {
-  	--header-blue: #007bff;
-  	--light-shade: #669cff; 
-	--dark-shade: #0062cc;
-	--blue-deep: #071952;
-	--blue-dark: #088395;
-	--blue-light: #37B7C3;
-	--blue-white: #EBF4F6;
-	--kinda-gray: #083544;
+    --header-blue: #007bff;
+    --light-shade: #669cff; 
+  --dark-shade: #0062cc;
+  --blue-deep: #071952;
+  --blue-dark: #088395;
+  --blue-light: #37B7C3;
+  --blue-white: #EBF4F6;
+  --kinda-gray: #083544;
+  --purple-base:rgb(110, 0, 110);
+  --purple-text: rgb(100, 50, 100);
+  --purple-pink: rgb(197, 140, 197);
+}
+@font-face {
+  font-family: komika-italic;
+  src: url("./misc/KOMTITP.woff");
 }
 body {
-	display: grid;
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: var(--blue-white);
-	justify-content: end;
-	color: var(--kinda-gray);
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  height: 100svh;
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #b14688;
+  background-image: url("/images/blue-red-landscape.jpg");
+  background-size: cover;
+  justify-content: end;
+  color: var(--purple-text);
+  background-attachment: fixed;
 }
-section{
-	background-color: var(--blue-white);
-	padding: 20px;
-	border-radius: 8px;
-    margin-bottom: 50px;
+.page{
+  background-color: var(--blue-white);
+  padding: 20px;
+  border-radius: 16px;
+  margin-bottom: 10px;
 }
 header {
-    display: grid;
-    grid-template-areas: 2fr 1fr;
-    background-color: var(--blue-dark);
-    color: var(--blue-white);
-    padding: 10px 20px;
-    text-align: center;
-    background-image: url("./images/bg480.jpg");
+  display: grid;
+  grid-template-columns: auto auto auto;
+  color: var(--purple-base);
+  text-align: center;
+  
 }
-#box1{
-    background-color: hotpink;
+#logo{
+  width: 150px;
+  align-items: center;
+  background-color: white;
+  background-size: contain;
+  background-image: url("/images/LOGO-200px.jpg");
+  background-repeat: no-repeat;
+  border-bottom-right-radius: 25%;
+  box-shadow: 4px 2px 5px rgba(0,0,0,0.1);
 }
-#box2{
-    background-color: white;
+#box3{
+  display: grid;
+  grid-template-rows: 1fr 1fr;
 }
 header h1{
-    padding: 0px;
-    margin: 0px;
+  background-color: white;
+  align-content: center;
+  padding: 20px;
+  margin: 0px;
+  box-shadow: 4px 2px 5px rgba(0,0,0,0.1);
 }
 
 header h2{
-    font-size: 14px;
-    padding: 0px;
-    margin: 0px;
-}
-nav {
-    background-color: var(--blue-white);
-    color: var(--blue-dark);
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 2rem;
-    padding: 5px;
-    align-items: center;
-    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-    text-align: center;
-    justify-content: space-evenly;
-}
-nav a {
-    color: var(--blue-dark);
-    text-decoration: none;
-}
-nav a:hover {
-    color: var(--light-shade);
-    transition: ease-in-out 300ms;
-  }
-nav a i {
-    margin-right: 10px; /* Space between icon and text */
-    font-size: 1.5 rem;
+  font-size: 14px;
+  padding: 0px;
+  margin: 0px;
 }
 main {
-    padding: 20px;
-    text-align: center;
+  display: grid;
+  padding: 20px;
+  text-align: center;
 }
 .services {
-    display: grid;
-    grid-auto-flow: column;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
+  display: grid;
+  /* grid-auto-flow: column; */
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+.services h1{
+  grid-column: 1 / span 3;
 }
 .service {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    transition: background-color 0.3s ease;
+  display: grid;
+  grid-template-columns: subgrid;
+  background-color: white;
+  padding: 1.5rem;
+  border-radius: 8px;
+  margin-bottom: 0px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  transition: background-color 0.3s ease;
+  
+  ul{
+      list-style-type: circle;
+      text-align: left;
+  }
+  #number{
+      font-size: 2em;
+      font-family: komika-italic;
+  }
+  #text{
+      font-size: small;
+      color: var(--purple-pink);
+  }
+  #apps{
+      font-size: 10px;
+  }
+  #price{
+      display: grid;
+      grid-template-columns: auto auto auto;
+      justify-content: end;
+      p{
+          grid-column: 1 /span 3;
+          text-align: left;
+          font-size: 12px;
+      }
+      #number{
+          font-size: 3em;
+          position: relative;
+          top:-20px;
+      }
+      #cifrao{
+          color: var(--purple-pink);
+          font-size: 12px;
+          font-weight: bold;
+      }
+      #cents{
+          font-weight: bold;
+          font-style: italic;
+          display: grid;
+          align-items: center;
+      }
+  }  
+  .border-top{
+      border-top: solid;
+      border-width: 1px;
+      width: 80%;
+      justify-self: center;
+  }
 }
 .service:hover {
-    background-color: #e1f5fe;
+  background-color: #e1f5fe;
 }
-.service h3 {
-    margin-top: 0;
+
+.service h1 {
+  display: grid;
+  grid-template-columns: auto auto;
+  color: var(--purple-base);
+  font-size: 3rem;
+  font-family: komika-italic;
+  margin-top: 0;
+  margin-bottom: 0px;
+  justify-content: center;
+  align-items: center;
 }
-.contact-form {
-    max-width: 600px;
-    margin: 20px auto;
-    background: var(--blue-white);
-    padding: 20px;
-    border-radius: 8px;
-}
-.contact-form label {
-    display: block;
-    margin-bottom: 5px;
-}
-.contact-form input,
-.contact-form textarea {
-    resize: none;
-    width: 95%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ddd;
+.service h1::first-letter {
+  font-size: 1.3em;
+  vertical-align: top;
 }
 
 .about-us {
-    text-align: center;
-    margin-top: 40px;
-}
-.about-us img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  text-align: center;
+  margin-top: 40px;
 }
 footer {
-    background-color: #333;
-    color: var(--blue-white);
-    text-align: center;
-    position: relative;
-    bottom: 0;
-    width: 100%;
+  background-color: #563475;
+  color: var(--blue-white);
+  text-align: center;
+  position: relative;
+  bottom: 0;
+  width: 100%;
 }
 
 footer a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 .button {
-    background-color: var(--blue-dark);
-    color: var(--blue-white);
-    border: none;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 10px 2px;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
+  background-color: var(--blue-dark);
+  color: var(--blue-white);
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  padding: 10px 10px;
+  text-align: center;
+  align-content: center;
+  text-decoration: none;
+  font-size: 20px;
+  margin: 5px 5px;
+  cursor: pointer;
+  border-radius: 30px;
+  transition: background-color 0.3s ease;
 }
 
 .button:hover {
-    background-color: #128C7E;
+  background-color: #128C7E;
 }
 
 @media (max-width: 600px) {
-    body{
-        margin-bottom:3rem;
-    }
-    nav a {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    nav a i {
-        margin-right: 0; /* Remove space when only showing icons */
-        font-size: 2rem;
-    }
-    .services {
-        grid-auto-flow: row;
-        align-items: center;
-    }
-    span{
-        display:none
-    }
-    nav a:hover{
-        span{
-            display:block
-        }
-    }
-    nav {
-        position: fixed;
-        bottom: 0;
-        top: unset;
-        height: 3rem;
-        z-index: 1;
-    }
+  body{
+      margin-bottom:3rem;
+      background-image: url("/images/blue-red.jpg");
+      background-position: bottom;
+  }
+  .services {
+      grid-auto-flow: row;
+      align-items: center;
+  }
+  .services h1{
+      grid-column: 1;
+  }
+  header h1{
+      font-size: large;
+  }
+  #logo{
+      width: 25svw;
+  }
 }
 
 /* Styling for the login button */
-        
+      
 /* For Chrome, Safari, and newer versions of Edge */
 ::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
-    background: lightblue; /* Change the track color to light blue */
+  background: lightblue; /* Change the track color to light blue */
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--light-shade); /* 30% opacity of blue */
-    border-radius: 6px;
+  background: var(--light-shade); /* 30% opacity of blue */
+  border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: var(--dark-shade);/* 50% opacity of blue on hover */
+  background: var(--dark-shade);/* 50% opacity of blue on hover */
 }
